# horeca

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: middlewares.py  settings.py  urls.py
docker-compose-dev/: docker-compose.yml
modules/base/: forms.py  models.py
modules/cart/: apps.py  cart.py  urls.py  views.py
modules/channel/: admin.py  apps.py  choices.py  models.py  urls.py  views.py
modules/channel/migrations/: 0001_initial.py  0002_channel_currency.py
modules/customer/: apps.py  models.py
modules/customer/migrations/: 0001_initial.py
modules/order/: apps.py  choices.py  models.py
modules/order/migrations/: 0001_initial.py
modules/product/: admin.py  choices.py  forms.py  models.py
modules/product/migrations/: 0001_initial.py  0002_alter_category_options_alter_productinfo_info_and_more.py  0003_remove_category_name.py  0004_alter_additiveinfo_unique_together_and_more.py  0005_remove_package_name.py  0006_alter_additive_price_alter_package_price_and_more.py  0007_productmediagallery_priority.py  0008_alter_productexcludechannel_unique_together.py  0009_additive_image.py
modules/store/: admin.py  apps.py  models.py
modules/store/migrations/: 0001_initial.py
settings/: settings.py  urls.py
static/admin/css/: admin_custom.css
static/css/: styles.css
static/js/: cart.js  product-modal.js
templates/: base.html
templates/admin/: change_form.html
templates/cart/: cart.html  modal.html
templates/channel/: list.html  modal.html  view.html
templates/utils/: breadcrumbs.html
(+2 files in other folders)
