[tool.poetry]
name = "Horeca"
version = "1.0.0"
description = "A Django project"
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
Django = "5.1.4"
django-environ = "0.11.2"
django-redis = "5.4.0"
psycopg2-binary = "2.9.10"
sqlparse = "0.5.3"
pillow="11.0.0"
redis="5.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
